@@ -1,6 +1,6 @@
-## $Id: Makefile.am,v 1.37 2007-01-03 13:46:17 adam Exp $
+## $Id: Makefile.am,v 1.38 2007-01-08 10:48:07 adam Exp $
 
-pkginclude_HEADERS= backend.h ccl.h cql.h comstack.h \
+pkginclude_HEADERS= backend.h ccl.h ccl_xml.h cql.h comstack.h \
  diagbib1.h diagsrw.h diagsru_update.h sortspec.h log.h logrpn.h marcdisp.h \
  nmem.h nmem_xml.h odr.h \
  oid.h options.h otherinfo.h pquery.h prt-ext.h querytowrbuf.h \
